Temp back to Java 17.